--- a/src/ToHeaven/MainFrame.form
+++ b/src/ToHeaven/MainFrame.form
@@ -143,35 +143,17 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JScrollPane" name="jScrollPane1">
-      <Properties>
-        <Property name="horizontalScrollBarPolicy" type="int" value="31"/>
-        <Property name="verticalScrollBarPolicy" type="int" value="22"/>
-      </Properties>
+    <Container class="javax.swing.JPanel" name="frameJP">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="Home home = new Home(frameJP);&#xa;ProductPage product = new ProductPage(frameJP);&#xa;WreathProductPage wpp = new WreathProductPage(frameJP);&#xa;CustomCoffin coffincustom = new CustomCoffin(frameJP);&#xa;CustomFuneral funeral = new CustomFuneral(frameJP);&#xa;CustomAsh ash = new CustomAsh(frameJP);&#xa;PackagePage packagepage = new PackagePage(frameJP);&#xa;&#xa;/*add each pages into cardlayout on frameJP*/&#xa;frameJP.add(home, &quot;home&quot;);&#xa;frameJP.add(product, &quot;product&quot;);&#xa;frameJP.add(wpp, &quot;wreathproductpage&quot;);&#xa;frameJP.add(coffincustom, &quot;coffincustom&quot;);&#xa;frameJP.add(funeral, &quot;funeral&quot;);&#xa;frameJP.add(ash, &quot;ash&quot;);&#xa;frameJP.add(packagepage, &quot;package&quot;);&#xa;&#xa;/*called home page(1st page)*/&#xa;CardLayout cd = (CardLayout) frameJP.getLayout();&#xa;cd.show(frameJP, &quot;home&quot;);"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
           <BorderConstraints direction="Center"/>
         </Constraint>
       </Constraints>
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
-      <SubComponents>
-        <Container class="javax.swing.JPanel" name="frameJP">
-          <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="99" green="ff" red="cc" type="rgb"/>
-            </Property>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[800, 500]"/>
-            </Property>
-          </Properties>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="Home home = new Home(frameJP);&#xa;ProductPage product = new ProductPage(frameJP);&#xa;WreathProductPage wpp = new WreathProductPage(frameJP);&#xa;CustomCoffin coffincustom = new CustomCoffin(frameJP);&#xa;CustomFuneral funeral = new CustomFuneral(mainPanel);&#xa;CustomAsh ash = new CustomAsh(mainPanel);&#xa;PackagePage packagepage = new PackagePage(mainPanel);&#xa;&#xa;/*add each pages into cardlayout on frameJP*/&#xa;frameJP.add(home, &quot;home&quot;);&#xa;frameJP.add(product, &quot;product&quot;);&#xa;frameJP.add(wpp, &quot;wreathproductpage&quot;);&#xa;frameJP.add(coffincustom, &quot;coffin&quot;);&#xa;frameJP.add(funeral, &quot;funeral&quot;);&#xa;frameJP.add(ash, &quot;ash&quot;);&#xa;frameJP.add(packagepage, &quot;package&quot;);&#xa;&#xa;/*called home page(1st page)*/&#xa;CardLayout cd = (CardLayout) frameJP.getLayout();&#xa;cd.show(frameJP, &quot;home&quot;);"/>
-          </AuxValues>
-
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
-        </Container>
-      </SubComponents>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
     </Container>
   </SubComponents>
 </Form>
